src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h


	
    // 연속보간 구동 시 첫 노드 시작 및 마지막 노드 시작 시 일정시간 이후 지정된 좌표계의 마스터 축의 OutputBit On/Off 제어
	// AxmContiBeginNode 앞에 호출해야 한다. 한번 구동하면 Flag가 초기화되어 다시 호출해야 사용할 수 있다.
    // StartTime/EndTime 단위는 [Sec]이며, 0 ~ 6.5초까지 설정 가능하다.
    // uOnoff	: 0 - 시작 위치에서 Bit On 종료 위치에서 Bit Off
    //          : 1 - 시작 위치에서 Bit Off 종료 위치에서 Bit On
    // lEndMode : 0 - 마지막 노드 구동 종료 후 즉시 OutputBit Off/On
    //			: 1 - 마지막 노드 구동 시작 후 입력한 EndTime 이후 OutputBit Off/On
    //			: 2 - 구동 시작 시 OutputBit On/Off 및 입력한 EndTime 이후 OutputBit Off/On
	DWORD __stdcall AxmContiSetWriteOutputBit(long lCoordinate, long lAxisNo, double dStartTime, double dEndTime, long lBitNo, long uOnoff, long lEndMode);


	// AxmContiSetWriteOutputBit로 설정한 값들을 반환한다.
	DWORD __stdcall	AxmContiGetWriteOutputBit(long lCoordinate, long* lpAxisNo, double* dpStartTime, double* dpEndTime, long* lpBitNo, long* lpOnoff, long* lpEndMode);


	// AxmContiSetWriteOutputBit로 설정한 값들을 리셋한다.
	DWORD __stdcall	AxmContiResetWriteOutputBit(long lCoordinate);


	// AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 설정한다.
	// dwSettlingTime
	//  1) 단위: [msec]
	//  2) 입력 가능 범위: 0 ~ 10000
	//  *참고* AxmMoveTorqueSetStopSettlingTime 함수로 대기 시간을 설정하지 않으면, dafault 값인 10[msec]가 적용된다.
	DWORD __stdcall AxmMoveTorqueSetStopSettlingTime(long lAxisNo, DWORD dwSettlingTime);

	// AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 반환한다.
	DWORD __stdcall AxmMoveTorqueGetStopSettlingTime(long lAxisNo, DWORD* dwpSettlingTime);


	//////////////////////////////////////////////////////////////////////////
	// Monitor  
	// 데이터를 수집을 진행할 항목을 추가합니다.
	DWORD  __stdcall AxlMonitorSetItem(long lBoardNo, long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);


	// 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
	DWORD  __stdcall AxlMonitorGetIndexInfo(long lBoardNo, long* lpItemSize, long* lpItemIndex);


	// 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
	DWORD  __stdcall AxlMonitorGetItemInfo(long lBoardNo, long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);


	// 모든 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetAllItem(long lBoardNo);


	// 선택된 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetItem(long lBoardNo, long lItemIndex);


	// 데이터 수집의 트리거 조건을 설정합니다.
	DWORD  __stdcall AxlMonitorSetTriggerOption(long lBoardNo, DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);


	// 데이터 수집의 트리거 조건을 가져옵니다.
	//DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

	// 데이터 수집의 트리거 조건을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetTriggerOption(long lBoardNo);


	// 데이터 수집을 시작합니다.
	DWORD  __stdcall AxlMonitorStart(long lBoardNo, DWORD dwStartOption, DWORD dwOverflowOption);


	// 데이터 수집을 정지합니다.
	DWORD  __stdcall AxlMonitorStop(long lBoardNo);


	// 수집된 데이터를 가져옵니다.
	DWORD  __stdcall AxlMonitorReadData(long lBoardNo, long* lpItemSize, long* lpDataCount, double* dpReadData);


	// 데이터 수집의 주기를 가져옵니다.
	DWORD  __stdcall AxlMonitorReadPeriod(long lBoardNo, DWORD* dwpPeriod);

	//////////////////////////////////////////////////////////////////////////


	//////////////////////////////////////////////////////////////////////////
	// MonitorEx  
	// 데이터를 수집을 진행할 항목을 추가합니다.
	DWORD  __stdcall AxlMonitorExSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);


	// 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
	DWORD  __stdcall AxlMonitorExGetIndexInfo(long* lpItemSize, long* lpItemIndex);


	// 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
	DWORD  __stdcall AxlMonitorExGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);


	// 모든 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetAllItem();


	// 선택된 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetItem(long lItemIndex);


	// 데이터 수집의 트리거 조건을 설정합니다.
	DWORD  __stdcall AxlMonitorExSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);


	// 데이터 수집의 트리거 조건을 가져옵니다.
	//DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

	// 데이터 수집의 트리거 조건을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetTriggerOption();


	// 데이터 수집을 시작합니다.
	DWORD  __stdcall AxlMonitorExStart(DWORD dwStartOption, DWORD dwOverflowOption);


	// 데이터 수집을 정지합니다.
	DWORD  __stdcall AxlMonitorExStop();


	// 수집된 데이터를 가져옵니다.
	DWORD  __stdcall AxlMonitorExReadData(long* lpItemSize, long* lpDataCount, double* dpReadData);


	// 데이터 수집의 주기를 가져옵니다.
	DWORD  __stdcall AxlMonitorExReadPeriod(DWORD* dwpPeriod);

	//////////////////////////////////////////////////////////////////////////

	// X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 직선 보간 #01.
	DWORD  __stdcall AxmLineMoveDual01(long lCoordNo, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);

	// X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 원호 보간 #01.
	DWORD  __stdcall AxmCircleCenterMoveDual01(long lCoordNo, long* lpAxes, double* dpCenterPosition, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, DWORD dwCWDir, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);


	// 해당보드의 connect mode 를 반환한다.
	// dpMode : 1 Auto Connect Mode
	// dpMode : 0 Manual Connect Mode
	DWORD	__stdcall AxlGetBoardConnectMode(long lBoardNo, DWORD *dwpMode);

	// 해당보드의 connect mode 를 설정한다.
	// dMode : 1 Auto Connect Mode
	// dMode : 0 Manual Connect Mode	
	DWORD	__stdcall AxlSetBoardConnectMode(long lBoardNo, DWORD dwMode);

	
	//지정된 축의 Command Queue 를 초기화 한다.
	DWORD	__stdcall AxmStatusSetCmdQueueClear(long lAxisNo);

	
	// 지정된 축의 통신 프로토콜관련 Data 를 확인한다.	
	DWORD	__stdcall AxmStatusGetControlBits(long lAxisNo, DWORD* dwpTxData, DWORD* dwpRxData);


	// 사용 중인 AXL이 있는지 확인(Shared Memory가 존재하는지 확인)
	BOOL	__stdcall AxlIsUsing();

	DWORD	__stdcall AxlRescanExternalDevice();

	DWORD	__stdcall AxlGetExternalDeviceInfo(long lBoardNo, void* devInfo);  //void* -> ExternalDeviceInfo*