src_old_backup/driver/ajinextek/AXL(Library)/Visual Basic(Net)/AXDev.vb


    ' 연속보간 구동 시 첫 노드 시작 및 마지막 노드 시작 시 일정시간 이후 지정된 좌표계의 마스터 축의 OutputBit On/Off 제어
    ' AxmContiBeginNode 앞에 호출해야 한다. 한번 구동하면 Flag가 초기화되어 다시 호출해야 사용할 수 있다.
    ' StartTime/EndTime 단위는 [Sec]이며, 0 ~ 6.5초까지 설정 가능하다.
    ' uOnoff : 0 - 시작 위치에서 Bit On 종료 위치에서 Bit Off
    '          : 1 - 시작 위치에서 Bit Off 종료 위치에서 Bit On
    ' lEndMode : 0 - 마지막 노드 구동 종료 후 즉시 OutputBit Off/On
    '   : 1 - 마지막 노드 구동 시작 후 입력한 EndTime 이후 OutputBit Off/On
    '   : 2 - 구동 시작 시 OutputBit On/Off 및 입력한 EndTime 이후 OutputBit Off/On
    Public Declare Function AxmContiSetWriteOutputBit Lib "AXL.dll" (ByVal lCoordinate As Integer, ByVal dStartTime As Double, ByVal dEndTime As Double, ByVal lBitNo As Integer, ByVal uOnoff As Integer, ByVal lEndMode As Integer) As Integer

    ' AxmContiSetWriteOutputBit로 설정한 값들을 반환한다.
    Public Declare Function AxmContiGetWriteOutputBit Lib "AXL.dll" (ByVal lCoordinate As Integer, ByRef dpStartTime As Double, ByRef dpEndTime As Double, ByRef lpBitNo As Integer, ByRef lpOnoff As Integer, ByRef lpEndMode As Integer) As Integer

    ' AxmContiSetWriteOutputBit로 설정한 값들을 리셋한다.
    Public Declare Function AxmContiResetWriteOutputBit Lib "AXL.dll" (ByVal lCoordinate As Integer) As Integer

    ' AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 설정한다.
    ' dwSettlingTime
    '  1) 단위: [msec]
    '  2) 입력 가능 범위: 0 ~ 10000
    '  *참고* AxmMoveTorqueSetStopSettlingTime 함수로 대기 시간을 설정하지 않으면, dafault 값인 10[msec]가 적용된다.
    Public Declare Function AxmMoveTorqueSetStopSettlingTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwSettlingTime As Integer) As Integer
    ' AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 반환한다.
    Public Declare Function AxmMoveTorqueGetStopSettlingTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpSettlingTime As Integer) As Integer

    '
    ' Monitor
    ' 데이터를 수집을 진행할 항목을 추가합니다.
    Public Declare Function AxlMonitorSetItem Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lItemIndex As Integer, ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer) As Integer

    ' 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
    Public Declare Function AxlMonitorGetIndexInfo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef lpItemSize As Integer, ByRef lpItemIndex As Integer) As Integer

    ' 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
    Public Declare Function AxlMonitorGetItemInfo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lItemIndex As Integer, ByRef dwpSignalType As Integer, ByRef lpSignalNo As Integer, ByRef lpSubSignalNo As Integer) As Integer

    ' 모든 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorResetAllItem Lib "AXL.dll" (ByVal lBoardNo As Integer) As Integer

    ' 선택된 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorResetItem Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lItemIndex As Integer) As Integer

    ' 데이터 수집의 트리거 조건을 설정합니다.
    Public Declare Function AxlMonitorSetTriggerOption Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer, ByVal dwOperatorType As Integer, ByVal dValue1 As Double, ByVal dValue2 As Double) As Integer

    ' 데이터 수집의 트리거 조건을 가져옵니다.
    'DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

    ' 데이터 수집의 트리거 조건을 초기화합니다.
    Public Declare Function AxlMonitorResetTriggerOption Lib "AXL.dll" (ByVal lBoardNo As Integer) As Integer

    ' 데이터 수집을 시작합니다.
    Public Declare Function AxlMonitorStart Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwStartOption As Integer, ByVal dwOverflowOption As Integer) As Integer

    ' 데이터 수집을 정지합니다.
    Public Declare Function AxlMonitorStop Lib "AXL.dll" (ByVal lBoardNo As Integer) As Integer

    ' 수집된 데이터를 가져옵니다.
    Public Declare Function AxlMonitorReadData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef lpItemSize As Integer, ByRef lpDataCount As Integer, ByRef dpReadData As Double) As Integer

    ' 데이터 수집의 주기를 가져옵니다.
    Public Declare Function AxlMonitorReadPeriod Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwpPeriod As Integer) As Integer
    '


    '
    ' MonitorEx
    ' 데이터를 수집을 진행할 항목을 추가합니다.
    Public Declare Function AxlMonitorExSetItem Lib "AXL.dll" (ByVal lItemIndex As Integer, ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer) As Integer

    ' 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
    Public Declare Function AxlMonitorExGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpItemIndex As Integer) As Integer

    ' 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
    Public Declare Function AxlMonitorExGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Integer, ByRef dwpSignalType As Integer, ByRef lpSignalNo As Integer, ByRef lpSubSignalNo As Integer) As Integer

    ' 모든 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorExResetAllItem Lib "AXL.dll" () As Integer

    ' 선택된 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorExResetItem Lib "AXL.dll" (ByVal lItemIndex As Integer) As Integer

    ' 데이터 수집의 트리거 조건을 설정합니다.
    Public Declare Function AxlMonitorExSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer, ByVal dwOperatorType As Integer, ByVal dValue1 As Double, ByVal dValue2 As Double) As Integer

    ' 데이터 수집의 트리거 조건을 가져옵니다.
    'DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

    ' 데이터 수집의 트리거 조건을 초기화합니다.
    Public Declare Function AxlMonitorExResetTriggerOption Lib "AXL.dll" () As Integer

    ' 데이터 수집을 시작합니다.
    Public Declare Function AxlMonitorExStart Lib "AXL.dll" (ByVal dwStartOption As Integer, ByVal dwOverflowOption As Integer) As Integer

    ' 데이터 수집을 정지합니다.
    Public Declare Function AxlMonitorExStop Lib "AXL.dll" () As Integer

    ' 수집된 데이터를 가져옵니다.
    Public Declare Function AxlMonitorExReadData Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpDataCount As Integer, ByRef dpReadData As Double) As Integer

    ' 데이터 수집의 주기를 가져옵니다.
    Public Declare Function AxlMonitorExReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Integer) As Integer
    '

    ' X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 직선 보간 #01.
    Public Declare Function AxmLineMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Integer, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Integer
    ' X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 원호 보간 #01.
    Public Declare Function AxmCircleCenterMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Integer, ByRef lpAxes As Integer, ByRef dpCenterPosition As Double, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dwCWDir As Integer, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Integer

    ' 해당보드의 connect mode 를 반환한다.
    ' dpMode : 1 Auto Connect Mode
    ' dpMode : 0 Manual Connect Mode
    Public Declare Function AxlGetBoardConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwpMode As Integer) As Integer
    ' 해당보드의 connect mode 를 설정한다.
    ' dMode : 1 Auto Connect Mode
    ' dMode : 0 Manual Connect Mode
    Public Declare Function AxlSetBoardConnectMode Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwMode As Integer) As Integer

    '지정된 축의 Command Queue 를 초기화 한다.
    Public Declare Function AxmStatusSetCmdQueueClear Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer

    ' 지정된 축의 통신 프로토콜관련 Data 를 확인한다.
    Public Declare Function AxmStatusGetControlBits Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpTxData As Integer, ByRef dwpRxData As Integer) As Integer

    ' 사용 중인 AXL이 있는지 확인(Shared Memory가 존재하는지 확인)
    Public Declare Function AxlIsUsing Lib "AXL.dll" () As Byte
    Public Declare Function AxlRescanExternalDevice Lib "AXL.dll" () As Integer
    Public Declare Function AxlGetExternalDeviceInfo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef devInfo As void*) As Integer


End Module
